--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -257,7 +257,7 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% static 'portfolio/ShineDeveloper.pdf' %}" download>Download Resume</a>
+            <a class="nav-link" href="{% static 'portfolio/Shine-Resume.pdf' %}" download>Download Resume</a>
           </li>
         </ul>
       </div>
