--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="ypmDcgEbS27q9Y1l8iBdumIHdPk5VzwvZ1RDtMsnNgo" />
+  <meta name="description" content="Shine's portfolio - showcasing projects, experiences, and skills in Python and Django.">
+  <meta name="keywords" content="Python Developer, Django, Portfolio, Web Development">
+  <meta name="author" content="Shine">
+  <meta name="robots" content="index, follow">
+
   <title>SHINE</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
